# vault

./: README.md  deploy_ledger.sh  deploy_vault.sh  dfx.json  test
auth/: main.mo
backend/: main.mo  manager.mo  manager_mocked.mo  manager_types.mo  payment_ledger.mo  proposal_executor.mo  test.mo  types.mo  vault.mo  vault_test.mo
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
frontend/idl/icp_ledger_canister/: icp_ledger_canister.did.js
frontend/idl/manager/: manager.did.d.ts  manager.did.js
frontend/idl/vault/: index.js  vault.did.d.ts  vault.did.js
frontend/idl/vault_test/: index.js  vault_test.did.js
frontend/src/: App.jsx  inversify.config.js  main.jsx
frontend/src/constants/: filters.js  global_config.js  module_config.js
frontend/src/layout/: login-modal.jsx
frontend/src/repository/: decisions.js  invitations.js  session.js  signers.js  transactions.js  users.js  vault.js  vaults.js
frontend/src/state/: approvals_actions.js  approvals_reducers.js  approvals_slice.js  config_slice.js  decisions_slice.js  global.js  invitations_slice.js  session_slice.js  signers_actions.js  signers_reducers.js  signers_slice.js  transactions_actions.js  transactions_derived.js  transactions_fetcher.js  transactions_reducers.js  transactions_slice.js  users_slice.js  vault_actions.js  vault_reducers.js  vaults_slice.js
frontend/src/utils/: cryptoAddressFormats.js  floatPrecision.js  mockDataGenerator.js
payment/: Cargo.toml  payment.did
payment/src/: lib.rs
src/backend/: main.mo  test.mo
(+36 files in other folders)
