[package]
name = "account"
version = "0.0.1"
edition = "2021"
rust-version = "1.81.0"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
once_cell = "1.15"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
libflate = "2.1.0"
pocket-ic = "5.0.0"

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
serde = { workspace = true }
ic-stable-structures = "0.6.3"
icrc-ledger-types = "0.1.5"
ic-ledger-types = "0.10.0"
ic-cdk-timers = "0.6"
hex = { version = "0.4.3", features = ["serde"] }
serde_cbor = "0.11.2"
serde_bytes = "0.11.14"
crc32fast = "1.4.0"
strum_macros = "0.26.2"
strum = "0.25.0"
sha2 = "0.10.8"
dyn-clone = "1.0.17"
lazy_static = "1.5.0"
once_cell = "1.15"
ciborium = "0.2.2"
b3_utils = { version = "0.13.1", features = ["ledger"] }
num-bigint = "0.4.6"
alloy = { git = "https://github.com/ic-alloy/ic-alloy.git", tag = "v0.3.5-icp.0", default-features = false, features = ["icp"]}
getrandom = { version = "0.2.15", features = ["custom"] }